--- a/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
+++ b/databank/general_data/templates/general_data/disaster_templates/disaster_table.html
@@ -12,7 +12,6 @@
     Filters
   </button>
 </div>
-
 <div>
   {% if messages %}
     {% for m in messages %}
@@ -24,27 +23,16 @@
   {% endif %}
 </div>
 
-
-
 <div class="bg-light mt-3">
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
     <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./hotel_table">
+      <form class="row" method="GET" action="./disaster_table">
         
-        <!-- <div class="form-group col-12">
-                  <div class="input-group">
-                      <input class="form-control py-2 border-right-0 border" type="search"
-                          name="currency_product_originDestination"
-                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-      
-                  </div>
-              </div> -->
-  
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_minimum"
             name="date_min"
@@ -53,14 +41,13 @@
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
           <input
-            type="date"
+            type="number"
             class="form-control"
             id="date_maximum"
             name="date_max"
           />
         </div>
   
-        
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
           <select
@@ -74,24 +61,74 @@
             {% endfor %}
           </select>
         </div>
+
         <div class="col-md-3">
-          <label for="ViewNameOfPlant">Name of the Hotel </label>
+          <label for="maximum_population">Maximum Human Loss</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_hotel_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_hotel"
+            id="maximum_human_loss"
+            placeholder="1000"
+            name="maximum_human_loss"
+            />
+        </div>
+
+        <div class="col-md-3">
+          <label for="minimum_human_loss">Minimum Human Loss</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="minimum_human_loss"
+            placeholder="1000"
+            name="minimum_human_loss"
+          />
+        </div>
+
+        <div class="col-md-3">
+          <label for="maximum_animal_loss">Maximum Animal Loss</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="maximum_animal_loss"
+            placeholder="1000"
+            name="maximum_animal_loss"
+            />
+        </div>
+        <div class="col-md-3">
+          <label for="minimum_animal_loss">Minimum Animal Loss</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="minimum_animal_loss"
+            placeholder="1000"
+            name="minimum_animal_loss"
           />
         </div>
         <div class="col-md-3">
-          <label for="ViewCity">City</label>
+          <label for="maximum_property_loss">Maximum Physical_Properties_Loss</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_city_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_city"
+            id="maximum_property_loss"
+            placeholder="1000"
+            name="maximum_property_loss"
+            />
+        </div>
+
+        <div class="col-md-3">
+          <label for="minimum_property_loss">Minimum Physical_Properties_Loss</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="minimum_property_loss"
+            placeholder="1000"
+            name="minimum_property_loss"
           />
         </div>
         <div class="col-md-3 d-flex align-items-end">
@@ -103,17 +140,16 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Hotel Data</div>
 
+<div class="fs-4 fw-bold text-center">Disaster Data</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
 </div>
 {% else %}
-
 <div>
-  <form method="post" action="{% url 'delete_selected_hotel' %}" id="delete-form-hotel">
+  <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -126,7 +162,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -151,17 +187,17 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Hotel
+                Disaster_Code
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Capacity_room
+                Human_Loss
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Occupancy_In_Year
+                Animal_Loss
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                City
-            </th>
+              Physical_Properties_Loss_In_USD
+          </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
             </th>
@@ -179,17 +215,18 @@
               value="{{ record.id }}"
             />
             </td>
-            <td>{{ record.Year }}</td>
+            <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Name_Of_The_Hotel }}</td>
-            <td>{{ record.Capacity_Room }}</td>
-            <td>{{ record.Occupancy_In_Year }}</td>
-            <td>{{ record.City }}</td>
+            <td>{{ record.Disaster_Code }}</td>
+            <td>{{ record.Human_Loss }}</td>
+            <td>{{ record.Animal_Loss }}</td>
+            <td>{{ record.Physical_Properties_Loss_In_USD}}</td>
+
             <td class="d-flex">
               <div class="btn">
                 <a
                   class=""
-                  id="delete_hotel"
+                  id="delete_forest"
                   onclick="confirmDelete('{{record.id}}')"
                   ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
                   
@@ -198,7 +235,7 @@
               <div class="btn ">
                 <a
                   class=""
-                  href="{% url 'update_hotel_record' record.id %}"
+                  href="{% url 'update_forest_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -211,36 +248,9 @@
     </div>
     </div>
   </form>
-</div>
+</div> 
 
 {% endif %}
 
 
-
-<script>
-  function confirmDelete(itemId) {
-      var result = confirm("Are you sure you want to delete this record?");
-      if (result) {
-          // User clicked "OK"
-          // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_hotel_record/' + itemId + '/';
-      } else {
-          // User clicked "Cancel" or closed the dialog
-          alert("Delete canceled!");
-      }
-  }
-
-  function confirmDeleteAll() {
-        var confirmDelete = confirm(
-          "Are you sure you want to delete all selected items?"
-        );
-        if (confirmDelete) {
-          document.getElementById("delete-form-hotel").submit();
-        }
-      }
-  
-
-
-  </script>
-  
 {% endblock %}
