--- a/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
+++ b/databank/general_data/templates/general_data/health_disease_templates/health_disease_table.html
@@ -12,7 +12,6 @@
     Filters
   </button>
 </div>
-
 <div>
   {% if messages %}
     {% for m in messages %}
@@ -24,96 +23,118 @@
   {% endif %}
 </div>
 
-
-
 <div class="bg-light mt-3">
 
-  <div class="collapse shadow rounded-2 " id="collapseFilter">
-    <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./hotel_table">
+    <div class="collapse shadow rounded-2 " id="collapseFilter">
+      <div class="px-2 py-2"> 
+        <form class="row" method="GET" action="./health_disease_table">
+          
+          <!-- <div class="form-group col-12">
+                    <div class="input-group">
+                        <input class="form-control py-2 border-right-0 border" type="search"
+                            name="currency_product_originDestination"
+                            placeholder="Search by Currency Type, Product Information or Origin/Destination" />
         
-        <!-- <div class="form-group col-12">
-                  <div class="input-group">
-                      <input class="form-control py-2 border-right-0 border" type="search"
-                          name="currency_product_originDestination"
-                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-      
-                  </div>
-              </div> -->
-  
+                    </div>
+                </div> -->
+    
+          <div class="col-md-3">
+            <label for="date_minimum">Calender Date Minimum</label>
+            <input
+              type="number"
+              class="form-control"
+              id="date_minimum"
+              name="date_min"
+            />
+          </div>
+          <div class="col-md-3">
+            <label for="date_maximum">Calender Date Maximum</label>
+            <input
+              type="number"
+              class="form-control"
+              id="date_maximum"
+              name="date_max"
+            />
+          </div>
+
+          <div class="form-group col-md-3">
+            <label for="country_category">Country</label>
+            <select
+              id="country_category"
+              class="form-control"
+              name="country_category"
+            >
+              <option selected>--</option>
+              {% for country_category in country_categories %}
+              <option value="{{country_category.id}}">{{country_category}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="col-md-3">
+            <label for="viewUnit">Unit</label>
+            <select id="unit" name="unit" class="form-control">
+              <option selected>--</option>
+              {% for unit in unit_categories %}
+              <option value="{{unit}}">{{unit}}</option>
+              {% endfor %}
+            </select>
+          </div>
+
+          <div class="form-group col-md-3">
+            <label for="health_disease_code">Health Disease Code</label>
+            <select id="land_code" class="form-control" name="health_disease_code">
+              <option selected>--</option>
+              {% for code in health_disease_codes %}
+              <option value="{{code.id }}">
+                {{code.Code}} - {{code.Disease_Type}}
+              </option>
+              {% endfor %}
+            </select>
+          </div>
+
         <div class="col-md-3">
-          <label for="date_minimum">Calender Date Minimum</label>
+          <label for="minimum_population">Minimum Population</label>
           <input
-            type="date"
+            type="number"
+            min="0"
             class="form-control"
-            id="date_minimum"
-            name="date_min"
+            id="minimum_population"
+            placeholder="1000"
+            name="minimum_population"
           />
         </div>
+
         <div class="col-md-3">
-          <label for="date_maximum">Calender Date Maximum</label>
+          <label for="maximum_population">Maximum Population</label>
           <input
-            type="date"
+            type="number"
+            min="0"
             class="form-control"
-            id="date_maximum"
-            name="date_max"
-          />
+            id="maximum_population"
+            placeholder="1000"
+            name="maximum_population"
+            />
         </div>
-  
-        
-        <div class="form-group col-md-3">
-          <label for="country_category">Country</label>
-          <select
-            id="country_category"
-            class="form-control"
-            name="country_category"
-          >
-            <option selected>--</option>
-            {% for country_category in country_categories %}
-            <option value="{{country_category.id}}">{{country_category}}</option>
-            {% endfor %}
-          </select>
-        </div>
-        <div class="col-md-3">
-          <label for="ViewNameOfPlant">Name of the Hotel </label>
-          <input
-            type="text"
-            class="form-control"
-            id="view_hotel_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_hotel"
-          />
-        </div>
-        <div class="col-md-3">
-          <label for="ViewCity">City</label>
-          <input
-            type="text"
-            class="form-control"
-            id="view_city_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_city"
-          />
-        </div>
-        <div class="col-md-3 d-flex align-items-end">
-          <button type="submit" class=" btn btn-primary">
-            Search
-          </button> 
-        </div>
-      </form>
+
+          <div class="col-md-3 d-flex align-items-end">
+            <button type="submit" class=" btn btn-primary">
+              Search
+            </button> 
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
-<div class="fs-4 fw-bold text-center">Hotel Data</div>
 
+  <div class="fs-4 fw-bold text-center">Health Disease Data</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
 </div>
 {% else %}
-
 <div>
-  <form method="post" action="{% url 'delete_selected_hotel' %}" id="delete-form-hotel">
+  <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -126,7 +147,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -151,16 +172,13 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Hotel
+                Disease_Code
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Capacity_room
+                Unit
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Occupancy_In_Year
-            </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                City
+                No_Of_Case
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
@@ -179,17 +197,16 @@
               value="{{ record.id }}"
             />
             </td>
-            <td>{{ record.Year }}</td>
+            <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Name_Of_The_Hotel }}</td>
-            <td>{{ record.Capacity_Room }}</td>
-            <td>{{ record.Occupancy_In_Year }}</td>
-            <td>{{ record.City }}</td>
+            <td>{{ record.Disease_Code }}</td>
+            <td>{{ record.Unit }}</td>
+            <td>{{ record.Number_Of_Case }}</td>
             <td class="d-flex">
               <div class="btn">
                 <a
                   class=""
-                  id="delete_hotel"
+                  id="delete_forest"
                   onclick="confirmDelete('{{record.id}}')"
                   ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
                   
@@ -198,7 +215,7 @@
               <div class="btn ">
                 <a
                   class=""
-                  href="{% url 'update_hotel_record' record.id %}"
+                  href="{% url 'update_forest_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -211,36 +228,8 @@
     </div>
     </div>
   </form>
-</div>
+</div> 
 
 {% endif %}
 
-
-
-<script>
-  function confirmDelete(itemId) {
-      var result = confirm("Are you sure you want to delete this record?");
-      if (result) {
-          // User clicked "OK"
-          // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_hotel_record/' + itemId + '/';
-      } else {
-          // User clicked "Cancel" or closed the dialog
-          alert("Delete canceled!");
-      }
-  }
-
-  function confirmDeleteAll() {
-        var confirmDelete = confirm(
-          "Are you sure you want to delete all selected items?"
-        );
-        if (confirmDelete) {
-          document.getElementById("delete-form-hotel").submit();
-        }
-      }
-  
-
-
-  </script>
-  
 {% endblock %}
