--- a/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
+++ b/databank/general_data/templates/general_data/public_unitillity_templates/public_unitillity_table.html
@@ -30,7 +30,7 @@
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
     <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./hotel_table">
+      <form class="row" method="GET" action="./public_unitillity_table">
         
         <!-- <div class="form-group col-12">
                   <div class="input-group">
@@ -59,8 +59,6 @@
             name="date_max"
           />
         </div>
-  
-        
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
           <select
@@ -75,24 +73,36 @@
           </select>
         </div>
         <div class="col-md-3">
-          <label for="ViewNameOfPlant">Name of the Hotel </label>
+            <label for="VIewPublic_Unitillity_Type_Category">Type_Of_Public_Utility</label>
+            <input
+              type="text"
+              class="form-control"
+              id="view_public_unitillity_type_category"
+              placeholder="e.g. abc"
+              name="public_unitillity_type_category"
+            />
+        </div>        
+        <div class="col-md-3">
+          <label for="minimum_population">Minimum Number</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_hotel_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_hotel"
+            id="minimum_number"
+            placeholder="1000"
+            name="minimum_number"
           />
         </div>
         <div class="col-md-3">
-          <label for="ViewCity">City</label>
+          <label for="maximum_number">Maxium Number</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_city_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_city"
-          />
+            id="maximum_number"
+            placeholder="1000"
+            name="maximum_number"
+            />
         </div>
         <div class="col-md-3 d-flex align-items-end">
           <button type="submit" class=" btn btn-primary">
@@ -103,8 +113,7 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Hotel Data</div>
-
+<div class="fs-4 fw-bold text-center">Public Unitillity Data</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
@@ -113,7 +122,7 @@
 {% else %}
 
 <div>
-  <form method="post" action="{% url 'delete_selected_hotel' %}" id="delete-form-hotel">
+  <form method="post" action="{% url 'delete_selected_public_unitillity' %}" id="delete-form-public_unitillity">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -126,7 +135,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_public_unitillity_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -150,17 +159,11 @@
             <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
               Country
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Hotel
-            </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Capacity_room
+            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+                Type_Of_Public_Utility
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Occupancy_In_Year
-            </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                City
+                Number
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
@@ -179,26 +182,23 @@
               value="{{ record.id }}"
             />
             </td>
-            <td>{{ record.Year }}</td>
+            <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Name_Of_The_Hotel }}</td>
-            <td>{{ record.Capacity_Room }}</td>
-            <td>{{ record.Occupancy_In_Year }}</td>
-            <td>{{ record.City }}</td>
+            <td>{{ record.Type_Of_Public_Utility }}</td>
+            <td>{{ record.Number }}</td>
             <td class="d-flex">
               <div class="btn">
                 <a
                   class=""
-                  id="delete_hotel"
+                  id="delete_tourism"
                   onclick="confirmDelete('{{record.id}}')"
                   ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
-                  
               </div>
     
               <div class="btn ">
                 <a
                   class=""
-                  href="{% url 'update_hotel_record' record.id %}"
+                  href="{% url 'update_public_unitillity_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -223,7 +223,7 @@
       if (result) {
           // User clicked "OK"
           // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_hotel_record/' + itemId + '/';
+          window.location.href = 'delete_public_unitillity_record/' + itemId + '/';
       } else {
           // User clicked "Cancel" or closed the dialog
           alert("Delete canceled!");
@@ -235,12 +235,9 @@
           "Are you sure you want to delete all selected items?"
         );
         if (confirmDelete) {
-          document.getElementById("delete-form-hotel").submit();
+          document.getElementById("delete-form-public_unitillity").submit();
         }
       }
-  
-
-
   </script>
   
 {% endblock %}
