--- a/databank/general_data/templates/general_data/road_templates/road_table.html
+++ b/databank/general_data/templates/general_data/road_templates/road_table.html
@@ -30,37 +30,30 @@
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
     <div class="px-2 py-2"> 
-      <form class="row" method="GET" action="./hotel_table">
-        
-        <!-- <div class="form-group col-12">
-                  <div class="input-group">
-                      <input class="form-control py-2 border-right-0 border" type="search"
-                          name="currency_product_originDestination"
-                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-      
-                  </div>
-              </div> -->
+      <form class="row" method="GET" action="./road_table">
   
         <div class="col-md-3">
-          <label for="date_minimum">Calender Date Minimum</label>
-          <input
-            type="date"
-            class="form-control"
-            id="date_minimum"
-            name="date_min"
-          />
-        </div>
-        <div class="col-md-3">
-          <label for="date_maximum">Calender Date Maximum</label>
-          <input
-            type="date"
-            class="form-control"
-            id="date_maximum"
-            name="date_max"
-          />
-        </div>
-  
-        
+            <label for="minimum_population">From Date</label>
+            <input
+              type="number"
+              min="0"
+              class="form-control"
+              id="from_date"
+              placeholder="2080"
+              name="from_date"
+            />
+          </div>
+          <div class="col-md-3">
+            <label for="maximum_number">To Date</label>
+            <input
+              type="number"
+              min="0"
+              class="form-control"
+              id="to_date"
+              placeholder="2082"
+              name="to_date"
+              />
+          </div>
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
           <select
@@ -74,25 +67,47 @@
             {% endfor %}
           </select>
         </div>
+        <div class="form-group col-md-3">
+            <label for="land_code">Road Code</label>
+            <select id="land_code" class="form-control" name="land_code">
+              <option selected>--</option>
+              {% for road_code in road_codes %}
+              <option value="{{road_code.id}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           d_code.id }}">
+                {{road_code.Code}} - {{road_code.Road_Type}}
+              </option>
+              {% endfor %}
+            </select>
+        </div>
         <div class="col-md-3">
-          <label for="ViewNameOfPlant">Name of the Hotel </label>
+            <label for="viewLandUnit">Unit</label>
+            <select id="land_unit" name="land_unit" class="form-control">
+              <option selected>--</option>
+              {% for length_unit in length_unit_options %}
+              <option value="{{length_unit}}">{{ length_unit }}</option>
+              {% endfor %}
+            </select>
+        </div>     
+        <div class="col-md-3">
+          <label for="minimum_population">Minimum length</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_hotel_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_hotel"
+            id="minimum_length"
+            placeholder="1000"
+            name="minimum_length"
           />
         </div>
         <div class="col-md-3">
-          <label for="ViewCity">City</label>
+          <label for="maximum_number">Maxium Length</label>
           <input
-            type="text"
+            type="number"
+            min="0"
             class="form-control"
-            id="view_city_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_city"
-          />
+            id="maximum_length"
+            placeholder="1000"
+            name="maximum_length"
+            />
         </div>
         <div class="col-md-3 d-flex align-items-end">
           <button type="submit" class=" btn btn-primary">
@@ -103,8 +118,7 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Hotel Data</div>
-
+<div class="fs-4 fw-bold text-center">Road Data</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
@@ -113,7 +127,7 @@
 {% else %}
 
 <div>
-  <form method="post" action="{% url 'delete_selected_hotel' %}" id="delete-form-hotel">
+  <form method="post" action="{% url 'delete_selected_public_unitillity' %}" id="delete-form-public_unitillity">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -126,7 +140,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_public_unitillity_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -150,17 +164,20 @@
             <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
               Country
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Hotel
-            </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Capacity_room
+            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+                Highway_No
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Occupancy_In_Year
+                Code_Type_Of_The_Road
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                City
+                Type_Of_The_Road
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Length_Unit
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Length
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
@@ -179,26 +196,26 @@
               value="{{ record.id }}"
             />
             </td>
-            <td>{{ record.Year }}</td>
+            <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Name_Of_The_Hotel }}</td>
-            <td>{{ record.Capacity_Room }}</td>
-            <td>{{ record.Occupancy_In_Year }}</td>
-            <td>{{ record.City }}</td>
+            <td>{{ record.Highway_No }}</td>
+            <td>{{ record.Code_Type_Of_Road.Code }}</td>
+            <td>{{ record.Code_Type_Of_Road.Road_Type }}</td>
+            <td>{{ record.Length_Unit_Options}}</td>
+            <td>{{ record.Length}}</td>
             <td class="d-flex">
               <div class="btn">
                 <a
                   class=""
-                  id="delete_hotel"
+                  id="delete_tourism"
                   onclick="confirmDelete('{{record.id}}')"
                   ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
-                  
               </div>
     
               <div class="btn ">
                 <a
                   class=""
-                  href="{% url 'update_hotel_record' record.id %}"
+                  href="{% url 'update_public_unitillity_record' record.id %}"
 
                   ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
@@ -215,32 +232,5 @@
 
 {% endif %}
 
-
-
-<script>
-  function confirmDelete(itemId) {
-      var result = confirm("Are you sure you want to delete this record?");
-      if (result) {
-          // User clicked "OK"
-          // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_hotel_record/' + itemId + '/';
-      } else {
-          // User clicked "Cancel" or closed the dialog
-          alert("Delete canceled!");
-      }
-  }
-
-  function confirmDeleteAll() {
-        var confirmDelete = confirm(
-          "Are you sure you want to delete all selected items?"
-        );
-        if (confirmDelete) {
-          document.getElementById("delete-form-hotel").submit();
-        }
-      }
-  
-
-
-  </script>
   
 {% endblock %}
