--- a/databank/accounts/templates/accounts/login.html
+++ b/databank/accounts/templates/accounts/login.html
@@ -126,12 +126,11 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-
-
 					<h3 id="form-title">LOGIN</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
+                        {% csrf_token %}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -151,7 +150,9 @@
 					</form>
 
 				</div>
-		
+                {% for message in messages %}
+                    <p id="messages"> {{message}} </p>
+                {% endfor %}
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
