--- a/databank/general_data/templates/general_data/water_templates/water_table.html
+++ b/databank/general_data/templates/general_data/water_templates/water_table.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
+{% load custom_filters %}
+
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,20 +12,6 @@
   >
     Filters
   </button>
-</div>
-
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
-
-
 
 <div class="bg-light mt-3">
 
@@ -32,15 +19,6 @@
     <div class="px-2 py-2"> 
       <form class="row" method="GET" action="./water_table">
         
-        <!-- <div class="form-group col-12">
-                  <div class="input-group">
-                      <input class="form-control py-2 border-right-0 border" type="search"
-                          name="currency_product_originDestination"
-                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-      
-                  </div>
-              </div> -->
-  
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
           <input
@@ -137,7 +115,10 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Water Data</div>
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'water_table' %}">Water Data</a>
+</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
